[package]
name = "nanowave"
version = "0.1.0"
authors = ["Nbiba Bedis <bedisnbiba@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gio = "0.9.1"
gtk = "0.9.2"
ureq = { version = "1.5.4", features = ["json"] }
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.60"
dirs-next = "2.0.0"
sqlite = "0.25.3"
