[package]
name = "nanowave"
version = "0.1.0"
authors = ["Nbiba Bedis <bedisnbiba@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gio = "0.14.8"
gtk = "0.14.3"
ureq = { version = "2.2.0", features = ["json"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
dirs-next = "2.0.0"
sqlite = "0.26.0"
